fixing overflow on nav

--- a/src/output.css
+++ b/src/output.css
@@ -568,6 +568,10 @@ video {
   left: 2.5rem;
 }
 
+.z-10{
+  z-index: 10;
+}
+
 .m-0{
   margin: 0px;
 }
@@ -1281,6 +1285,10 @@ body {
 }
 
 @media (min-width: 640px){
+  .sm\:z-10{
+    z-index: 10;
+  }
+
   .sm\:mx-10{
     margin-left: 2.5rem;
     margin-right: 2.5rem;
